--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,22 +1,31 @@
-<%= form_with(model: article, local: true) do |form| %>
-  <% if article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
+<form class="form-group">
+  <div class="form-group">
+    <%= form_with(model: article, local: true) do |form| %>
+      <% if article.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
 
-      <ul>
-      <% article.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% article.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= form.label :text %>
-    <%= form.text_area :text, id: :article_text %>
-  </div>
+      <div class="row form-group">
+        <%= form.label :name %>
+        <%= form.text_field :name, id: :article_name %>
+      </div>
 
-  <div class="actions">
-    <%= form.submit %>
+      <div class="row form-control">
+        <%= form.label :text %>
+        <%= form.text_area :text, id: :article_text %>
+      </div>
+
+      <div class="actions">
+        <%= form.submit %>
+      </div>
+    <% end %>
   </div>
-<% end %>
+</form>
