--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,10 +2,11 @@
 
 <h1>Articles</h1>
 
-<table>
+<table class="table table-striped">
   <thead>
     <tr>
-      <th>Text</th>
+      <th style="width: 30%">Name</th>
+      <th style="width: 50%">Text</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -13,6 +14,7 @@
   <tbody>
     <% @articles.each do |article| %>
       <tr>
+        <td><%= article.name %></td>
         <td><%= article.text %></td>
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
