--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="container">
+      <button type="button" class="btn btn-primary">Primary</button>
+      <%= yield %>
+    </div>
   </body>
 </html>
